Reorganising project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_BUILD_TYPE Release)
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 
-include_directories(${EIGEN3_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
+include_directories(${EIGEN3_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS}, include)
+
+# Source files
+file(GLOB SOURCES "src/*.cpp")
 
 # Warn about unused code
 add_compile_options(-Wunused)
 
-# include_directories(/usr/local/include ./include)
-add_executable(fast-paint-texture main.cpp rasterizer.hpp rasterizer.cpp)
+add_executable(fast-paint-texture ${SOURCES})
 target_link_libraries(fast-paint-texture ${OpenCV_LIBRARIES})
